--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "lodash": "^4.17.11",
+    "mockjs": "^1.0.1-beta3",
+    "moment": "^2.22.2",
     "vue": "^2.5.17",
     "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^7.2.0"
+    "vue-cli-plugin-iview": "^1.0.6",
+    "vue-i18n": "^8.1.0",
+    "vue-property-decorator": "^7.2.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "vuex-persist": "^1.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.0",
@@ -22,6 +31,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
+    "iview": "^3.1.4",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
     "tslint-config-standard": "^8.0.1",
